<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volta_hardware</name>
  <version>1.1.0</version>
  <description>The volta_hardware package</description>

  <author email="james.abraham@botsync.co">James Abraham</author>
  <author email="venk0023@e.ntu.edu.sg">Venkat</author>

  <maintainer email="james.abraham@botsync.co">James Abraham</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>volta_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>volta_control</depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
